      extract information from Jar files.
    + [NT] Limit java-info to files classified as "Zip Archive"
      by file(1).
  * collection/objdump-info:
    + [NT] Only call readelf once per binary.
    + [NT] Use xargs + a new helper to reduce the number of
      readelf calls even further.
  * collection/objdump-info-helper:
    + [NT] New file.

  * debian/control:
    + [NT] Add (Build-)Dependency on libarchive-zip-perl.
    + [NT] Remove runtime dependency on unzip (replaced by
      libarchive-zip-perl).
    + [NT] Add explicit Build-Dependency on xz-utils instead
      of relying on dpkg-dev's dependency on it.
    + [NT] Add versioned xz-utils as alternative to xz-lzma
      or lzma.  (Closes: #678775)
    + [NT] Add missing suggests for lzma packages.  lzma is
      only used for source packages compressed with lzma.

  * frontend/lintian:
    + [NT] Check if some collections can be skipped for existing
      entries.  This is mostly useful for static labs, where
      certain checks can be now be rerun without having to run
      "unpacked".
    + [NT] Emit run times of collections and checks with debug
      level 2 (or higher).
    + [NT] Load lintian's libraries earlier.

  * lib/Lintian/CollScript.pm:
    + [NT] New file.

 -- Niels Thykier <niels@thykier.net>  Sun, 17 Jun 2012 23:25:06 +0200

lintian (2.5.9) unstable; urgency=low

  * Summary of tag changes:
    + Added:
      - run-parts-cron-filename-contains-illegal-chars
    + Removed:
      - run-parts-cron-filename-contains-full-stop

  * checks/*:
    + [NT] Migrate to new Lintian::Path API.
  * checks/fields:
    + [NT] Also classify lib*-cli-dev as belonging to the section
      cli-mono (rather than libdevel).  Thanks to Chow Loong Jin
      for the report and the patch.  (Closes: #675358)
  * checks/files{,.desc}:
    + [NT] Rename run-parts-cron-filename-contains-full-stop and
      have it catch "+" in the filename as well.  Add reference
      to policy 9.5.1 in the  tag description.